--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "helmet": "^3.21.0",
     "jquery-touch-events": "^1.0.7",
     "lodash": "^4.17.15",
+    "motion-ui": "^2.0.3",
     "node": "^12.9.1",
     "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
