--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "socket.io": "^2.3.0",
     "uuid": "^3.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jquery": "^3.5.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
