--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jquery": "^3.5.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "repository": {
     "type": "git",
