bug fixes: roll skill, added: gitignore update.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 node_modules
+**/client/styles/__breakPoints.scss
+**/client/styles/__breakPoints.css
+**/client/styles/gameEffects.scss
+**/client/styles/gameEffects.css
+**/client/styles/gameEffects.css.map
+**/client/styles/gameCard.scss
+**/client/styles/gameCard.css.map
+**/client/styles/gameCard.css
+**/client/styles/hexa.scss
+**/client/styles/hexa.css
+**/client/styles/hexa.css.map
+**/client/styles/_logInScreen.scss
+**/client/styles/style.scss
+**/client/styles/style.css
+**/client/styles/style.css.map
+**/client/styles/_logInScreen.css
+**/client/styles/waiterSegment.scss
+**/client/styles/waiterSegment.css
+**/client/styles/waiterSegment.css.map
+
