--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ node_modules
 **/client/styles/waiterSegment.scss
 **/client/styles/waiterSegment.css
 **/client/styles/waiterSegment.css.map
+**/client/styles/cardGlow.scss
+**/client/styles/cardGlow.css
+**/client/styles/cardGlow.css.map
 
