--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "engines": {
     "node": "13.14"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "node index"
   },
